# konseho

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  README.md  git-commands-for-pr.txt  mcp.json  migration-report-final.md  model-defaults-summary.md  pr-description.md  pyproject.toml  run.sh  setup-dev.sh
.claude/: settings.local.json
.claude/commands/: README.md  code.md  commit-guidelines.md  create-examples.md  debug-council.md  implement-agents.md  implement-chat.md  implement-context.md  implement-council.md  implement-execution.md  implement-steps.md  init-phase.md  optimize-performance.md  release-checklist.md  write-tests.md
docs/: async-shell-execution.md  council-refactoring.md  debate-step-explained.md  dependency-injection.md  file-operations-security.md  idea-honing.md  implementation-plan.md  issue-prioritization.md  mcp-integration.md  model-providers.md  output-saving.md  prompt-plan.md  protocols-architecture.md  python-modernization-plan.md  search-architecture-summary.md  search-providers.md  shell-security.md  stdout-issue-fix.md  step-types-guide.md  switching-search-providers.md  tool-system.md
examples/: README.md  __init__.py  advanced_council_components.py  chat_demo.py  code_review_council.py  custom_analyzer_model.py  dependency_injection_example.py  dynamic_council_comparison.py  human_in_loop_council.py  llm_native_council.py  mcp_configuration.py  mcp_search_example.py  mcp_tools_example.py  output_saving_demo.py  parallel_combiner_demo.py  protocol_example.py  real_search.py  refactored_steps_demo.py  research_council.py  search_provider_demo.py  setup_and_run.py  simple_council.py  simple_council_mock.py
examples/agents/: __init__.py  coder.py  explorer.py  planner.py  reviewer.py
legacy_outputs/legacy_council/: 20250527_165032_caa30509.json  20250527_165032_caa30509.txt
scripts/: README.md  check_type_completeness.py  modernize_types.py  run_modernization.py  validate_docstrings.py
src/konseho/: __init__.py  __main__.py  adapters.py  config.py  example_councils.py  factories.py  logging_config.py  main.py  models.py  personas.py  protocols.py  setup_wizard.py
src/konseho/agents/: __init__.py  base.py  human.py
src/konseho/core/: __init__.py  context.py  council.py  debate_components.py  error_handler.py  moderator_assigner.py  output_manager.py  parallel_strategies.py  step_engine.py  step_factory.py  step_orchestrator.py  steps.py  steps_v2.py
src/konseho/dynamic/: __init__.py  agent_factory.py  analyzer.py  builder.py  model_agent_factory.py  model_analyzer.py  model_step_planner.py  persona_registry.py  step_planner.py
src/konseho/dynamic/llm_native/: __init__.py  (+3 more)
src/konseho/execution/: __init__.py  events.py  executor.py
src/konseho/interface/: __init__.py  chat.py
src/konseho/mcp/: __init__.py  config.py  server.py  strands_integration.py
src/konseho/tools/: __init__.py  code_ops.py  collections.py  diff_utils.py  file_ops.py  http_ops.py  mcp_adapter.py  mcp_search_adapter.py  parallel.py  search_config.py  search_ops.py  search_tool.py  shell_ops.py
tests/: README.md  conftest.py  test_context.py  test_council.py  test_mcp_config.py
tests/fixtures/: __init__.py  mock_agents.py
tests/integration/: test_events.py  test_execution.py  test_workflows.py
tests/unit/: test_agent_cloning.py  test_agent_parallel_tools.py  test_agents.py  test_code_ops.py  test_context.py  test_context_refactor.py  test_council.py  test_council_refactor.py  test_dependency_injection.py  test_execution.py  test_executor.py  test_file_ops.py  test_file_ops_security.py  test_http_ops.py  test_mcp_search_adapter.py  test_parallel_executor.py  test_persona_tools.py  test_protocols.py  test_query_analyzer.py  test_search_ops.py  test_shell_ops.py  test_step_engine.py  test_steps.py  test_steps_v2.py  test_task_splitting.py  test_tool_collections.py  test_voting.py
tests/unit/test_llm_native/: test_builder.py  test_generator.py  test_schemas.py
